@@ -1,5 +1,6 @@
 Version 2.02.173 - 
 =================================
+  Tidy clvmd client list processing and fix segfaults.
   Protect clvmd debug log messages with mutex and add client id.
   Fix shellcheck reported issues for script files.
 
